# m2_hw12

./: README.md  pyproject.toml
project/: alembic.ini  crud.py  database.py  main.py  models.py
project/alembic/: env.py
